Add blob storage to DKG Context and default implementation as part of dkg essentials plugin

--- a/packages/plugin-dkg-essentials/package.json
+++ b/packages/plugin-dkg-essentials/package.json
@@ -12,6 +12,11 @@
       "types": "./dist/utils.d.ts",
       "import": "./dist/utils.mjs",
       "require": "./dist/utils.js"
+    },
+    "./createFsBlobStorage": {
+      "types": "./dist/createFsBlobStorage.d.ts",
+      "import": "./dist/createFsBlobStorage.mjs",
+      "require": "./dist/createFsBlobStorage.js"
     }
   },
   "scripts": {
