Centralize devDependencies. Formatting.

--- a/packages/plugin-swagger/package.json
+++ b/packages/plugin-swagger/package.json
@@ -21,15 +21,6 @@
     "@dkg/eslint-config": "*",
     "@dkg/typescript-config": "*",
     "@types/swagger-ui-express": "^4.1.8",
-    "eslint": "^9.29.0",
-    "tsup": "^8.5.0",
-    "mocha": "^10.7.3",
-    "chai": "^5.1.1",
-    "@types/chai": "^4.3.18",
-    "@types/mocha": "^10.0.7",
-    "sinon": "^19.0.2",
-    "@types/sinon": "^17.0.3",
-    "supertest": "^7.0.0",
-    "@types/supertest": "^6.0.2"
+    "tsup": "^8.5.0"
   }
 }
