--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.5",
+    "@playwright/test": "^1.54.2",
     "@types/chai": "^5.2.2",
     "@types/mocha": "^10.0.10",
     "@types/sinon": "^17.0.4",
     "@types/supertest": "^6.0.3",
     "chai": "^5.2.1",
     "dotenv": "^17.2.1",
+    "eslint": "^9.29.0",
     "mocha": "^11.7.1",
     "mochawesome": "^7.1.3",
     "prettier": "^3.5.3",
