--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@playwright/test": "^1.54.2",
     "@types/chai": "^5.2.2",
     "@types/mocha": "^10.0.10",
+    "@types/node": "^22.9.0",
     "@types/sinon": "^17.0.4",
     "@types/supertest": "^6.0.3",
     "chai": "^5.2.1",
@@ -37,7 +38,7 @@
     "typescript": "^5.8.3"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=22"
   },
   "packageManager": "npm@10.9.2",
   "workspaces": [
