--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -34,6 +34,7 @@
     "cors": "^2.8.5",
     "dkg.js": "^8.0.14",
     "express": "^5.1.0",
+    "mime-types": "^3.0.1",
     "morgan": "^1.10.0",
     "uuid": "^10.0.0",
     "zod": "^3.25.67"
@@ -43,6 +44,7 @@
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/mime-types": "^3.0.1",
     "@types/morgan": "^1.9.10",
     "tsup": "^8.5.0"
   }
