Added testing helpers file in @dkg/plugins, exporting in-memory blob storage provider

--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -20,6 +20,11 @@
       "types": "./dist/types.d.ts",
       "import": "./dist/types.mjs",
       "require": "./dist/types.js"
+    },
+    "./testing": {
+      "types": "./dist/testing.d.ts",
+      "import": "./dist/testing.mjs",
+      "require": "./dist/testing.js"
     }
   },
   "scripts": {
