--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -53,6 +53,7 @@
     "expo-constants": "~17.1.7",
     "expo-crypto": "~14.1.5",
     "expo-document-picker": "~13.1.6",
+    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
@@ -77,9 +78,9 @@
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "react-tiny-popover": "^8.1.6",
     "three-spritetext": "^1.10.0",
-    "uuid": "^10.0.0",
-    "expo-file-system": "~18.1.11"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
