--- a/turbo.json
+++ b/turbo.json
@@ -20,6 +20,11 @@
       "inputs": ["src/**", "tests/**", "*.config.*"],
       "outputs": []
     },
+    "test:e2e": {
+      "dependsOn": ["^build"],
+      "inputs": ["src/**", "tests/**", "*.config.*"],
+      "outputs": []
+    },
     "dev": {
       "cache": false,
       "persistent": true
