add e2e tests publish and get

--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -19,11 +19,10 @@
     "script:setup": "node dist/scripts/setup.js",
     "script:createUser": "node dist/scripts/createUser.js",
     "script:createToken": "node dist/scripts/createToken.js",
-    "test": "PLAYWRIGHT_JUNIT_OUTPUT_NAME=DKG_Node_UI_Tests.xml playwright test tests/spec/testUI.spec.js --timeout=30000 --reporter=list,junit || true",
-    "test:ui": "PLAYWRIGHT_JUNIT_OUTPUT_NAME=DKG_Node_UI_Tests.xml PLAYWRIGHT_HTML_REPORT=DKG_Node_UI_Tests playwright test tests/spec/testUI.spec.js",
-    "test:headed": "playwright test --headed",
-    "test:debug": "playwright test --debug",
-    "test:report": "playwright show-report",
+    "test": "./tests/utils/kill-dev-ports.sh && PLAYWRIGHT_JUNIT_OUTPUT_NAME=DKG_Node_UI_Tests.xml playwright test tests/spec/testUI.spec.js --timeout=300000 --grep '@gh_actions' --reporter=list,junit || true",
+    "test:all": "PLAYWRIGHT_JUNIT_OUTPUT_NAME=DKG_Node_UI_Tests.xml playwright test tests/spec/testUI.spec.js --timeout=300000 --reporter=list,junit || true",
+    "kill-ports": "./tests/utils/kill-dev-ports.sh",
+    "dev:clean": "npm run kill-ports && turbo dev",
     "postinstall": "node fix-uuid.js"
   },
   "dependencies": {
