fix comments from github actions

--- a/turbo.json
+++ b/turbo.json
@@ -20,7 +20,7 @@
       "inputs": ["src/**", "tests/**", "*.config.*"],
       "outputs": []
     },
-    "test:all": {
+    "test:e2e": {
       "dependsOn": ["^build"],
       "inputs": ["src/**", "tests/**", "*.config.*"],
       "outputs": []
