--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -16,7 +16,7 @@ jobs:
   validate:
     name: Check Code Quality on Node.js ${{ matrix.node-version }}
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 45
     env:
       TURBO_TELEMETRY_DISABLED: 1
 
@@ -98,3 +98,5 @@ jobs:
 
       - name: Run tests from all packages
         run: npm run test
+        env:
+          CI: true
