--- a/packages/plugin-oauth/package.json
+++ b/packages/plugin-oauth/package.json
@@ -6,8 +6,8 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "dev": "tsup src/*.ts --format cjs,esm --dts --watch",
-    "build": "tsup src/*.ts --format cjs,esm --dts",
+    "dev": "tsup src/*.ts src/**/*.ts --format cjs,esm --dts --watch",
+    "build": "tsup src/*.ts src/**/*.ts --format cjs,esm --dts",
     "check-types": "tsc --noEmit",
     "lint": "eslint . --max-warnings 0",
     "test": "mocha 'tests/**/*.spec.ts'"
