--- a/packages/plugin-dkg-essentials/package.json
+++ b/packages/plugin-dkg-essentials/package.json
@@ -24,7 +24,7 @@
     "build": "tsup src/*.ts src/**/*.ts --format cjs,esm --dts",
     "check-types": "tsc --noEmit",
     "lint": "eslint . --max-warnings 0",
-    "test": "mocha 'tests/**/*.spec.ts'"
+    "test": "mocha --loader ../../node_modules/tsx/dist/loader.mjs 'tests/**/*.spec.ts'"
   },
   "dependencies": {
     "@dkg/plugin-swagger": "^0.0.2",
