--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -88,7 +88,7 @@ jobs:
           echo "Environment files created successfully!"
 
       - name: Install Playwright browsers
-        run: npx playwright install
+        run: npx playwright install --with-deps chromium
 
       - name: Create admin user for tests
         run: |
