--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -33,7 +33,12 @@
     "@expo-google-fonts/manrope": "^0.4.1",
     "@expo-google-fonts/space-grotesk": "^0.4.0",
     "@expo/vector-icons": "^14.1.0",
+    "@langchain/anthropic": "^0.3.28",
     "@langchain/core": "^0.3.66",
+    "@langchain/google-genai": "^0.2.18",
+    "@langchain/groq": "^0.2.4",
+    "@langchain/mistralai": "^0.2.1",
+    "@langchain/ollama": "^0.2.4",
     "@langchain/openai": "^0.6.3",
     "@modelcontextprotocol/sdk": "^1.16.0",
     "@node-rs/argon2": "^2.0.2",
