--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,mjs,json,md,yml}\"",
     "check-types": "turbo run check-types",
     "test:mocha": "mocha",
-    "test": "npm run test:api && npm run test:integration && npm run test:e2e",
+    "test": "npm run test:api && npm run test:integration && turbo run test --filter=@dkg/agent --force",
     "test:e2e": "turbo run test:e2e --filter=@dkg/agent --force",
     "test:api": "turbo run test --filter='@dkg/plugin-*' --force",
     "test:integration": "cd apps/agent/tests/integration && npm test",
@@ -20,12 +20,12 @@
   "devDependencies": {
     "@changesets/cli": "^2.29.5",
     "@playwright/test": "^1.54.2",
-    "@types/chai": "^5.2.2",
+    "@types/chai": "^4.3.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.9.0",
     "@types/sinon": "^17.0.4",
     "@types/supertest": "^6.0.3",
-    "chai": "^5.2.1",
+    "chai": "^4.5.0",
     "dotenv": "^17.2.1",
     "eslint": "^9.29.0",
     "mocha": "^11.7.1",
@@ -44,6 +44,7 @@
   "packageManager": "npm@10.9.2",
   "workspaces": [
     "apps/*",
-    "packages/*"
+    "packages/*",
+    "apps/agent/tests/integration"
   ]
 }
