--- a/turbo.json
+++ b/turbo.json
@@ -9,6 +9,7 @@
       "outputs": [".next/**", "!.next/cache/**", "dist/**"]
     },
     "//#format": {},
+    "//#check-format": {},
     "lint": {
       "dependsOn": ["//#format", "^check-types", "^lint"]
     },
