--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -63,6 +63,7 @@
     "expo-system-ui": "~5.0.10",
     "expo-three": "^8.0.0",
     "expo-web-browser": "~14.2.0",
+    "nodemailer": "^7.0.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
@@ -84,6 +85,7 @@
     "@dkg/eslint-config": "*",
     "@dkg/typescript-config": "*",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/nodemailer": "^7.0.1",
     "@types/react": "~19.0.10",
     "drizzle-kit": "^0.31.4",
     "tsup": "^8.5.0",
