fix archiving issue

--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -20,7 +20,7 @@
     "script:createUser": "node dist/scripts/createUser.js",
     "script:createToken": "node dist/scripts/createToken.js",
     "test": "PLAYWRIGHT_JUNIT_OUTPUT_NAME=DKG_Node_UI_Tests.xml playwright test spec/testUI.spec.js --grep '@gh_actions' --reporter=list,html,junit",
-    "test:e2e": "PLAYWRIGHT_JUNIT_OUTPUT_NAME=DKG_Node_UI_Tests.xml playwright test spec/testUI.spec.js --reporter=list,junit",
+    "test:e2e": "PLAYWRIGHT_JUNIT_OUTPUT_NAME=DKG_Node_UI_Tests.xml playwright test spec/testUI.spec.js --reporter=list,html,junit",
     "postinstall": "node fix-uuid.js"
   },
   "dependencies": {
