--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -21,6 +21,8 @@
     "script:createToken": "node dist/scripts/createToken.js",
     "test": "PLAYWRIGHT_JUNIT_OUTPUT_NAME=DKG_Node_UI_Tests.xml playwright test spec/testUI.spec.js --grep '@gh_actions' --reporter=list,html,junit",
     "test:e2e": "PLAYWRIGHT_JUNIT_OUTPUT_NAME=DKG_Node_UI_Tests.xml playwright test spec/testUI.spec.js --reporter=list,junit",
+    "test:install": "playwright install",
+    "test:integration": "NODE_OPTIONS='--import tsx' mocha 'tests/integration/**/*.spec.ts'",
     "postinstall": "node fix-uuid.js"
   },
   "dependencies": {
@@ -84,12 +86,24 @@
     "@babel/core": "^7.25.2",
     "@dkg/eslint-config": "*",
     "@dkg/typescript-config": "*",
+    "@playwright/test": "^1.47.0",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/chai": "^5.2.2",
+    "@types/mocha": "^10.0.0",
+    "@types/node": "^20.0.0",
     "@types/nodemailer": "^7.0.1",
     "@types/react": "~19.0.10",
+    "@types/supertest": "^6.0.0",
+    "chai": "^6.0.1",
     "drizzle-kit": "^0.31.4",
+    "mocha": "^10.0.0",
+    "nyc": "^15.1.0",
+    "supertest": "^6.3.0",
+    "ts-node": "^10.9.0",
     "tsup": "^8.5.0",
-    "turbo": "^2.5.5"
+    "turbo": "^2.5.5",
+    "tsx": "^4.0.0",
+    "typescript": "^5.0.0"
   },
   "private": true
 }
